<resources>
    <string name="app_name" translatable="false">Qm Authenticator</string>
    <string name="issuer_hint">Issuer（Optional）</string>
    <string name="issuer">Issuer</string>
    <string name="account_hint">Account Name</string>
    <string name="secret_hint">Secret</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="type">Type</string>
    <string name="verification_code">Verification Code</string>
    <string name="not_set">Not set</string>
    <string name="successfully">Key added successfully</string>
    <string name="copy_successfully">The verification code has been copied to the clipboard</string>
    <string name="copy_verification_code">Copy the verification code</string>
    <string name="view_details">View details</string>
    <string name="delete_token">Delete Token</string>
    <string name="token_details">Token details</string>
    <string name="copy_key">Copy key</string>
    <string name="key">Key</string>
    <string name="copy_key_successfully">The key has been copied to the clipboard</string>
    <string name="delete_token_title">Delete Token</string>
    <string name="delete_token_message">Are you sure you want to delete %1$s? This action cannot be undone.</string>
    <string name="delete">Delete</string>
    <string name="no_tokens_message">No tokens yet, tap the button in the bottom right corner to add</string>
    <string name="token_deleted">Token deleted</string>
    <string name="add_verify_key">Add Verification Key</string>
    <string name="enter_account_name">Please enter account name</string>
    <string name="enter_secret_key">Please enter secret key</string>
    <string name="telegram_group" translatable="false">Telegram Group</string>
    <string name="qq_group" translatable="false">QQ Group</string>
    <string name="new_version" translatable="false">New Version</string>
    <string name="update" translatable="false">Update</string>
    <string name="code_error_placeholder" translatable="false">Error</string>
    <string name="enter_setting_key">Enter the setting key</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="import_qm">Import Qm Authenticator</string>
    <string name="adding_method">Adding Method</string>
    <string name="export_failed">Export Failed</string>
    <string name="failed_generate_qr">Failed to generate QR code</string>
    <string name="failed_generate_verification_code">Failed to generate verification code</string>
    <string name="invalid_qr_code">Invalid QR code</string>
    <string name="error_occurred_while_processing_qr_code">An error occurred while processing the QR code</string>
    <string name="scan_failed">Scanning failed</string>
    <string name="permissions">Camera permissions are required to scan QR codes</string>
    <string name="export_tokens" translatable="false">Export Tokens</string>
</resources>